syntax = "proto3";

package helloworld;

service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayError (HelloRequest) returns (HelloReply) {}
  rpc SayHello3 (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  int32 id = 1;
  string name = 2;
}

message HelloReply {
  int32 id = 1;
  string message = 2;
  string traceId = 3;
}

